--- a/packages/base/framework/helpers/PackageHelper.jspf
+++ b/packages/base/framework/helpers/PackageHelper.jspf
@@ -1,9 +1,15 @@
-<%--
-    TODO: Description of file.
---%>
 <%!
     /**
      * TODO: Description of class
+     *  ... This class takes the current bundle object as a parameter so that it
+     *    can utilize the current bundle/package path information to build up
+     *    the necessary URLs.  This allows the package to be easily portable
+     *    and avoids the need to change any path information if the name of the
+     *    bundle or package is changed.
+     *  ... By convention, values that will not be consistent (such as the name
+     *    or csrv of a Kineti Login or Catalog form) should be retrieved from
+     *    the package configuration file, rather than hard coded.  This improves
+     *    portability of a bundle and package between environments.
      */
     public static class PackageHelper {
         // Declare the private variables
@@ -11,13 +17,13 @@
 
         // Document
         public PackageHelper(Bundle bundle) {this.bundle = bundle;}
-                      
+
         /***********************************************************************
          * HELPER METHODS
          **********************************************************************/
-        
+
         public String detailsUrl(String csrv) {
-            return bundle.applicationPath()+"/ReviewRequest?csrv="+csrv+"&reviewPage="+bundle.relativePath()+"/packages/base/details";
+            return bundle.applicationPath()+"/ReviewRequest?csrv="+csrv+"&reviewPage="+bundle.relativePackagePath()+"/details";
         }
 
         public String formUrl(String id) {
@@ -37,7 +43,7 @@
         }
 
         public String reviewUrl(String csrv) {
-            return bundle.applicationPath()+"/ReviewRequest?csrv="+csrv+"&reviewPage="+bundle.relativePath()+"/packages/base/review";
+            return bundle.applicationPath()+"/ReviewRequest?csrv="+csrv+"&reviewPage="+bundle.relativePackagePath()+"/review";
         }
 
         public String submissionUrl(String csrv) {
