--- a/core/framework/helpers/DateHelper.jspf
+++ b/core/framework/helpers/DateHelper.jspf
@@ -1,9 +1,8 @@
-<%@page import="java.text.DateFormat"%>
-<%@page import="java.text.SimpleDateFormat"%>
-<%@page import="java.util.Calendar"%>
-<%@page import="java.util.Date"%>
-<%@page import="java.util.Locale"%>
+<%@page import="java.text.*,java.util.*"%>
 <%!
+    /**
+     * TODO: Document.
+     */
     public static class DateHelper {
         public static final String DATE_FORMAT_SIMPLE = "MM/dd/yyyy HH:mm:ss";
 
