Committing fix for the issue that prevented display.jsp from working properly outside the context of a review reqeust.  Also includes multiple documentation enhancements.

--- a/packages/base/framework/includes/reviewRequestInitialization.jspf
+++ b/packages/base/framework/includes/reviewRequestInitialization.jspf
@@ -39,6 +39,7 @@
         customerSurvey.setCustomerSessionInstanceID(customerSurveyReview.getCustomerSessionInstanceID());
         customerSurvey.setCustomerSurveyInstanceID(customerSurveyReview.getCustomerSurveyInstanceID());
         customerSurvey.setSurveyTemplateInstanceID(customerSurveyReview.getSurveyTemplateInstanceID());
+        customerSurvey.setCustomHeaderContent(customerSurveyReview.getCustomHeaderContent());
         customerSurvey.setStylesheetFileName(customerSurveyReview.getStylesheetFileName());
         customerSurvey.setJavascriptFileName(customerSurveyReview.getJavascriptFileName());
         customerSurvey.setSubmitType("ReviewRequest");
