--- a/packages/base/interface/fragments/displayHeadContent.jspf
+++ b/packages/base/interface/fragments/displayHeadContent.jspf
@@ -10,5 +10,5 @@
 
 <!-- Configure an event to initialize the client manager after the window is loaded --> 
 <script type="text/javascript">
-    KD.utils.Action.addListener(window, "load", function() {clientManager.init()});
+    KD.utils.Action.addListener(window, "load", clientManager.init, clientManager, true);
 </script>
