--- a/packages/base/interface/fragments/sessionMessage.jspf
+++ b/packages/base/interface/fragments/sessionMessage.jspf
@@ -1,14 +1,12 @@
 <%--
     TODO: Document.
-    TODO: Refactor (and determine if this is required).
+    TODO: Refactor.
     ... In general, this file should not need to be modified.
 --%>
 
-<!-- BEGIN {themeRoot}/jsp/shared/sessionMessage.jsfp -->
 <% if (!ThemeHelper.isBlank(UserContext.getErrorMessage())) { %>
 <div class="errorMessage">
     <jsp:getProperty name="UserContext" property="errorMessage"/>
 </div>
 <jsp:setProperty name="UserContext" property="errorMessage" value=""/>
 <% } %>
-<!-- END {themeRoot}/jsp/shared/sessionMessage.jsfp -->
